@@ -6,16 +6,19 @@ buildscript {
   }
 
   dependencies {
-    classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta3'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
-    classpath 'io.fabric.tools:gradle:1.21.2'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
+    classpath 'io.fabric.tools:gradle:1.21.4'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$deps.kotlin"
+    classpath "org.jetbrains.kotlin:kotlin-android-extensions:$deps.kotlin"
   }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'io.fabric'
+apply from: 'jacoco.gradle'
 
 def appId = "com.makingiants.todayhistory"
 def appVersionName = "0.1.0"
@@ -26,13 +29,19 @@ def gitSha() {
 }
 
 android {
-  compileSdkVersion rootProject.sdkVersion
-  buildToolsVersion rootProject.buildToolsVersion
+  compileSdkVersion setup.targetSdk
+  buildToolsVersion setup.buildTools
+
+  signingConfigs {
+    debug {
+      storeFile file("../debug.keystore")
+    }
+  }
 
   defaultConfig {
     applicationId appId
-    minSdkVersion rootProject.minSdkVersion
-    targetSdkVersion rootProject.sdkVersion
+    minSdkVersion setup.minSdk
+    targetSdkVersion setup.targetSdk
     versionCode appVersionCode
     versionName appVersionName
 
@@ -45,12 +54,15 @@ android {
   }
   buildTypes {
     debug {
-      minifyEnabled false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
     release {
-      minifyEnabled false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      signingConfig signingConfigs.debug
 
       buildConfigField "String", "GIT_SHA", "\"${gitSha()}\""
       buildConfigField "boolean", "ANALYTICS_ENABLED", "true"
@@ -61,49 +73,40 @@ android {
     prod
     mocked
   }
-  testOptions {
-    unitTests.all {
-      jvmArgs "-XX:MaxPermSize=2048m"
-
-      beforeTest { descriptor -> logger.lifecycle("Running test: " + descriptor)
-      }
-    }
-  }
 
   lintOptions {
-    fatal 'UnusedResources'
     abortOnError false
   }
 
-  // Retrolambda
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+  // Kotlin
+  sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+    prod.java.srcDirs += 'src/prod/kotlin'
+    mocked.java.srcDirs += 'src/mocked/kotlin'
   }
 }
 
 repositories {
   maven { url 'https://maven.fabric.io/public' }
-  maven { url "https://clojars.org/repo/" }
 }
 
 dependencies {
-  compile project(':api')
-  compile rootProject.deps.appCompatV7
-  compile "com.android.support:design:${rootProject.supportLibVersion}"
-  compile "com.android.support:cardview-v7:${rootProject.supportLibVersion}"
-  compile "com.android.support:palette-v7:${rootProject.supportLibVersion}"
+  // Base
+  compile "com.android.support:appcompat-v7:$deps.supportLib"
+  compile "com.android.support:design:$deps.supportLib"
+  compile "com.android.support:cardview-v7:$deps.supportLib"
+  compile "com.android.support:palette-v7:$deps.supportLib"
+  compile "org.jetbrains.kotlin:kotlin-stdlib:$deps.kotlin"
 
-  compile 'com.jakewharton:butterknife:7.0.1'
+  compile project(':api')
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'com.github.florent37:picassopalette:1.0.2@aar'
 
   // Management
-  compile 'frankiesardo:icepick:3.1.0'
-  provided 'frankiesardo:icepick-processor:3.1.0'
   compile 'com.jakewharton.timber:timber:4.1.0@aar'
   compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') { transitive = true; }
 
+  testCompile "org.jetbrains.kotlin:kotlin-test:$deps.kotlin"
   testCompile 'junit:junit:4.12'
   testCompile "org.mockito:mockito-core:1.10.19"
   testCompile('com.squareup.assertj:assertj-android:1.1.1') {
